[package]
name = "abc-game"
version = "0.0.0"
authors = ["jessie <jessie.varela6@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.3"
actix-web = "3"
derive_more = "0.99"
env_logger = "0.9"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"